# parcel

./: .gitignore  gulpfile.js  package.json  turbo.json  worker_test.js
crates/macros/: Cargo.toml
crates/node-bindings/: Cargo.toml
crates/node-bindings/src/: graph.rs  lib.rs
crates/node-bindings/src/graph/: dfs_actions.rs  inner.rs  mod.rs
crates/parcel_core/: Cargo.toml
crates/parcel_core/src/: lib.rs  project_path.rs  worker.js
crates/parcel_core/src/requests/: mod.rs
crates/parcel_core/src/requests/asset_graph_request/: mod.rs
crates/parcel_plugin_transformer_js/: Cargo.toml
crates/parcel_plugin_transformer_js/benches/: parcel_plugin_transformer_js_benchmarks.rs
crates/parcel_plugin_transformer_js/benches/parcel_plugin_transformer_js_benchmark/: stub.js
crates/parcel_plugin_transformer_js/src/: lib.rs  transformer.rs
crates/parcel_plugin_transformer_js/src/transformer/: test_helpers.rs
