[package]
name = "parcel_core"
version = "0.1.0"
edition = "2021"
description = "Core logic for the parcel bundler"

[features]
default = []
napi_noop = ["napi-derive/noop"]

[dependencies]
parcel_filesystem = { path = "../parcel_filesystem" }
parcel_napi_helpers = { path = "../parcel_napi_helpers" }
parcel-resolver = { path = "../../packages/utils/node-resolver-rs" }

# asset graph
swc_ecma_parser = "0.144.1"
swc_ecma_visit = "0.99.1"
swc_ecma_ast = "0.113.1"
swc_common = "0.33.26"
rayon = "1.10.0"
tokio = { version = "1.37.0", features = ["full"] }
petgraph = "0.6.4"

# general
anyhow = "1.0.82"
glob = "0.3.1"
mockall = "0.12.1"
napi = "2.16.4"
napi-derive = { version = "2.16.3" }
serde = "1.0.200"
serde_json = "1.0.116"
toml = "0.8.12"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }